# Traynex

./: CMakeLists.txt  CMakeUserPresets.json  README.md  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  resource.h  resource.qrc  translator.cpp  translator.h  windowstraymanager.cpp  windowstraymanager.h
language/: en.lang  zh.lang
src/: hotkeymanager.cpp  hotkeymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  volumecontrol.cpp  volumecontrol.h  windowstraymanager.cpp  windowstraymanager.h
